--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://docker-mysql:3306/world
+#spring.datasource.url=jdbc:mysql://docker-mysql:3306/world
+spring.datasource.url=jdbc:mysql://localhost:3306/world
 spring.datasource.username=root
-spring.datasource.password=24487024
+spring.datasource.password=root
 
 server.port=9091
